<resources>
    <string name="app_name">DietApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="registrarse">Registrarse</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Login</string>
    <string name="opciones_de_comida">Opciones de comida</string>
    <string name="opciones_realizadas">Opciones realizadas</string>
    <string name="mi_menu">Mi Menu</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>
    <string name="logo">Logo</string>
    <string name="registrar">Registrar</string>
    <string name="edad">Edad</string>
    <string name="apellido">Apellido</string>
    <string name="nombre">Nombre</string>
    <string name="email">Email</string>
    <string name="name">name</string>
    <string name="imagencomida">ImagenComida</string>
</resources>